Fix inconsistencies wrt slide-sorter between impress and draw
- Inconsistencies between impress and draw (slide-sorter)
- Fix missing slide-sorter divider
- Mobile: Fix white borders
- Read-only mode inconsistencies (slide-sorter)
- Mobile: landscape: divider is present at the left edge of the screen (remove)
- #presentation-toolbar misaligned and lack bottom border

Reviewed-on: https://gerrit.libreoffice.org/c/online/+/102182
Tested-by: Jenkins
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
(cherry picked from commit 80542f6cf9646c89de54b6c7240ab6edbd7ba0f3)
Reviewed-on: https://gerrit.libreoffice.org/c/online/+/102302

--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -87,12 +87,14 @@ w2ui-toolbar {
 }
 
 #presentation-toolbar {
-		background-color: #dfdfdf;
-		text-align: center;
-		position: absolute;
-		z-index: 500;
-		width: 98%;
-		padding: 0px 0px 10px 0px;
+	background-color: #dfdfdf;
+	text-align: center;
+	position: absolute;
+	z-index: 500;
+	width: 98%;
+	padding-bottom: 0px;
+	margin-top: -1px;
+	border-bottom: 1px solid #bbbbbb;
 }
 
 /* For MS Edge 40, the select2 combo boxes need to have higher z-index than #map
